fixed nav behind name block

--- a/CSS/myStyle.css
+++ b/CSS/myStyle.css
@@ -14,8 +14,7 @@ h1, h2, h3, h4{
 header{
     display: flex;
     background-color: rgba(246, 255, 0, 0.9);
-    padding: 2vh 0vw 2vh 3vw;
-
+    padding: 2vh 10vw 2vh 3vw;
     justify-content: space-around;
 }
 
